[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.8.5"
tokio = { version = "1.21.2", features = ["full"] }
rustls = "0.20"
rcgen = "0.10"
certificate = { path = "../certificate" }