[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.24"
quinn = "0.8.5"
rcgen = "0.10.0"
rustls = "0.20.6"
tokio = { version = "1.21.2", features = ["full"] }
certificate = { path = "../certificate" }
argopt = "0.3.0"
